cmake_minimum_required(VERSION 3.1)

set(CMAKE_CXX_STANDARD 11)

add_executable(starter_test_headeronly.exe starter_test_headeronly.cpp)
#target_link_libraries(starter_test_headeronly.exe boost_unit_test_framework)

add_executable(starter_test_dynlink.exe starter_test_dynlink.cpp)
target_link_libraries(starter_test_dynlink.exe boost_unit_test_framework)

add_executable(starter_test_staticlink.exe starter_test_staticlink.cpp)
target_link_libraries(starter_test_staticlink.exe libboost_unit_test_framework.a)

add_executable(test_case_no_param_auto_register.exe test_case_no_param_auto_register.cpp)
target_link_libraries(test_case_no_param_auto_register.exe boost_unit_test_framework)

add_executable(test_case_no_param_manual_register.exe test_case_no_param_manual_register.cpp)
target_link_libraries(test_case_no_param_manual_register.exe libboost_unit_test_framework.a)

add_executable(dataset_example_fibonacci.exe dataset_example_fibonacci.cpp)
target_link_libraries(dataset_example_fibonacci.exe libboost_unit_test_framework.a)

add_executable(dataset_example_declare.exe dataset_example_declare.cpp)
target_link_libraries(dataset_example_declare.exe libboost_unit_test_framework.a)

add_executable(dataset_example_joins.exe dataset_example_joins.cpp)
target_link_libraries(dataset_example_joins.exe libboost_unit_test_framework.a)

add_executable(dataset_example_zips.exe dataset_example_zips.cpp)
target_link_libraries(dataset_example_zips.exe libboost_unit_test_framework.a)

add_executable(dataset_example_grid.exe dataset_example_grid.cpp)
target_link_libraries(dataset_example_grid.exe libboost_unit_test_framework.a)

add_executable(dataset_generators_singleton.exe dataset_generators_singleton.cpp)
target_link_libraries(dataset_generators_singleton.exe libboost_unit_test_framework.a)

add_executable(dataset_generators_carrays.exe dataset_generators_carrays.cpp)
target_link_libraries(dataset_generators_carrays.exe libboost_unit_test_framework.a)

add_executable(dataset_generators_forward_iterable_containers.exe dataset_generators_forward_iterable_containers.cpp)
target_link_libraries(dataset_generators_forward_iterable_containers.exe libboost_unit_test_framework.a)

add_executable(dataset_generators_range.exe dataset_generators_range.cpp)
target_link_libraries(dataset_generators_range.exe libboost_unit_test_framework.a)

add_executable(dataset_generators_random.exe dataset_generators_random.cpp)
target_link_libraries(dataset_generators_random.exe libboost_unit_test_framework.a)
